<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Calendar</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="schedule">Schedule</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help &amp; feedback</string>

    <!--menus-->
    <string name="action_today">Today</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!--content views-->
    <string name="no_calendar_events_error">No event found!</string>
    <string name="no_title">(No title)</string>
    <string name="wait_load_events_message">Please wait while system loads events</string>
    <string name="x_more" tools:ignore="PluralsCandidate">%d more</string>
    <string name="show_less">Show less</string>
    <string name="no_event">Nothing planned. Tap to create.</string>
    <string name="week_x">Week %d</string>

    <!--event details-->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--list events-->
    <string-array name="first_day_saturday">
        <item>S</item>
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
    </string-array>
    <string-array name="first_day_sunday">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string-array name="first_day_monday">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

    <!--display event details activity-->
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <plurals name="x_week">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="x_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="x_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="x_minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="x_guest">
        <item quantity="one">%d guest</item>
        <item quantity="other">%d guests</item>
    </plurals>
    <string name="guest_email">\n &#8226; %s</string>
    <string name="cancelled">Cancelled</string>

    <!--content descriptions-->
    <string name="date_time_icon" translatable="false">DateTime icon</string>
    <string name="note_icon" translatable="false">Note icon</string>
    <string name="arrow_icon" translatable="false">Arrow icon</string>
    <string name="check" translatable="false">Check</string>

    <!--add event activity-->
    <string name="save">Save</string>
    <string name="enter_title">Enter title, times, people, places…</string>
    <string name="invite_people">Invite people</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="add_location">Add location</string>
    <string name="default_color">Default color</string>
    <string name="add_note">Add note</string>
    <string name="busy">Busy</string>
    <string name="all_day">All-day</string>
    <string name="more_option">More options</string>
    <string name="available">Available</string>
    <string name="icon">icon</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="no_notification">No notification</string>
    <string name="custom">Custom…</string>
    <string name="before">before</string>
    <string name="done">Done</string>
    <string name="title_empty_error">Title cannot be blank</string>
    <string name="wait_message">Please wait until the process is completed</string>
    <string name="discard_event">Are you sure you want to discard this event?</string>
    <string name="keep_editing">KEEP EDITING</string>
    <string name="discard">DISCARD</string>
    <string name="tentative">Tentative</string>
    <string name="notification">As notification</string>
    <string name="popup">As popup</string>
    <string name="ok" translatable="false">OK</string>
    <string name="no_account_found">No account found</string>

    <!--permissions-->
    <string name="grant">Grant</string>
    <string name="require_calendar_permission_error">This application requires access to calendar</string>

    <!--Settings-->
    <!--general-->
    <string name="pref_header_general">General</string>

    <string name="pref_key_start_of_the_week" translatable="false">start_of_the_week</string>
    <string name="pref_start_of_the_week_default" translatable="false">monday</string>
    <string name="pref_title_start_of_the_week">Start of the week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>

    <string name="pref_key_show_week_number" translatable="false">show_week_number</string>
    <string name="pref_title_show_week_number">Show week number</string>

    <string name="pref_key_default_event_duration" translatable="false">default_event_duration</string>
    <string name="pref_default_event_duration_values_default" translatable="false">60</string>
    <string name="pref_title_default_event_duration">Default event duration</string>
    <string name="no_end_time">No end time</string>
    <string name="minutes_15">15 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="minutes_60">60 minutes</string>
    <string name="minutes_90">90 minutes</string>
    <string name="minutes_120">120 minutes</string>

    <string name="pref_key_alternate_calendar" translatable="false">alternate_calendar</string>
    <string name="pref_alternate_calendar_default" translatable="false">no</string>
    <string name="pref_title_alternate_calendar">Alternate calendar</string>
    <string name="no_alternate_calendar">No alternate calendar</string>
    <string name="chinese_simplified">Chinese calendar - Simplified</string>

    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_language_default" translatable="false">en</string>
    <string name="pref_title_language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <!-- notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_key_notify_on_this_device" translatable="false">notify_on_this_device</string>
    <string name="pref_title_notify_on_this_device">Notify on this device</string>

    <string name="pref_key_ringtone" translatable="false">ringtone</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_key_vibrate" translatable="false">Vibrate</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>


    <string-array name="pref_start_of_the_week_list_titles">
        <item>@string/saturday</item>
        <item>@string/sunday</item>
        <item>@string/monday</item>
    </string-array>
    <string-array name="pref_start_of_the_week_list_values">
        <item>saturday</item>
        <item>sunday</item>
        <item>monday</item>
    </string-array>

    <string-array name="pref_default_event_duration_titles">
        <item>@string/no_alternate_calendar</item>
        <item>@string/minutes_15</item>
        <item>@string/minutes_30</item>
        <item>@string/minutes_60</item>
        <item>@string/minutes_90</item>
        <item>@string/minutes_120</item>
    </string-array>
    <string-array name="pref_default_event_duration_values">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

    <string-array name="pref_alternate_calendar_list_titles">
        <item>@string/no_alternate_calendar</item>
        <item>@string/chinese_simplified</item>
    </string-array>
    <string-array name="pref_alternate_calendar_list_values">
        <item>no</item>
        <item>chinese</item>
    </string-array>

    <string-array name="pref_language_list_titles">
        <item>@string/english</item>
        <item>@string/vietnamese</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>en</item>
        <item>vi</item>
    </string-array>
</resources>
